# outsider-api

./: Cargo.toml  README.md  flake.nix
src/: main.rs
src/handlers/: error.rs  lobby.rs  mod.rs
src/models/: lobby.rs  mod.rs
