[package]
name = "outsider-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
